5. Semestar/Programski prevodioci/Kolokvijum 1/const deklaracija/resenje/semantic.output
Grammar

    0 $accept: program $end

    1 program: function_list

    2 function_list: function
    3              | function_list function

    4 @1: /* empty */

    5 function: _TYPE _ID @1 _LPAREN parameter _RPAREN body

    6 parameter: /* empty */
    7          | _TYPE _ID

    8 body: _LBRACKET constant_list variable_list statement_list _RBRACKET

    9 constant_list: /* empty */
   10              | constant_list constant

   11 constant: _CONST _TYPE _ID _ASSIGN literal _SEMICOLON

   12 variable_list: /* empty */
   13              | variable_list variable

   14 variable: _TYPE _ID _SEMICOLON

   15 statement_list: /* empty */
   16               | statement_list statement

   17 statement: compound_statement
   18          | assignment_statement
   19          | if_statement
   20          | return_statement

   21 compound_statement: _LBRACKET statement_list _RBRACKET

   22 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON

   23 num_exp: exp
   24        | num_exp _AROP exp

   25 exp: literal
   26    | _ID
   27    | function_call
   28    | _LPAREN num_exp _RPAREN

   29 literal: _INT_NUMBER
   30        | _UINT_NUMBER

   31 @2: /* empty */

   32 function_call: _ID @2 _LPAREN argument _RPAREN

   33 argument: /* empty */
   34         | num_exp

   35 if_statement: if_part
   36             | if_part _ELSE statement

   37 if_part: _IF _LPAREN rel_exp _RPAREN statement

   38 rel_exp: num_exp _RELOP num_exp

   39 return_statement: _RETURN num_exp _SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
_TYPE (258) 5 7 11 14
_IF (259) 37
_ELSE (260) 36
_RETURN (261) 39
_ID (262) 5 7 11 14 22 26 32
_INT_NUMBER (263) 29
_UINT_NUMBER (264) 30
_LPAREN (265) 5 28 32 37
_RPAREN (266) 5 28 32 37
_LBRACKET (267) 8 21
_RBRACKET (268) 8 21
_ASSIGN (269) 11 22
_SEMICOLON (270) 11 14 22 39
_AROP (271) 24
_RELOP (272) 38
_CONST (273) 11
ONLY_IF (274)


Nonterminals, with rules where they appear

$accept (20)
    on left: 0
program (21)
    on left: 1, on right: 0
function_list (22)
    on left: 2 3, on right: 1 3
function (23)
    on left: 5, on right: 2 3
@1 (24)
    on left: 4, on right: 5
parameter (25)
    on left: 6 7, on right: 5
body (26)
    on left: 8, on right: 5
constant_list (27)
    on left: 9 10, on right: 8 10
constant (28)
    on left: 11, on right: 10
variable_list (29)
    on left: 12 13, on right: 8 13
variable (30)
    on left: 14, on right: 13
statement_list (31)
    on left: 15 16, on right: 8 16 21
statement (32)
    on left: 17 18 19 20, on right: 16 36 37
compound_statement (33)
    on left: 21, on right: 17
assignment_statement (34)
    on left: 22, on right: 18
num_exp (35)
    on left: 23 24, on right: 22 24 28 34 38 39
exp (36)
    on left: 25 26 27 28, on right: 23 24
literal (37)
    on left: 29 30, on right: 11 25
function_call (38)
    on left: 32, on right: 27
@2 (39)
    on left: 31, on right: 32
argument (40)
    on left: 33 34, on right: 32
if_statement (41)
    on left: 35 36, on right: 19
if_part (42)
    on left: 37, on right: 35 36
rel_exp (43)
    on left: 38, on right: 37
return_statement (44)
    on left: 39, on right: 20


state 0

    0 $accept: . program $end

    _TYPE  shift, and go to state 1

    program        go to state 2
    function_list  go to state 3
    function       go to state 4


state 1

    5 function: _TYPE . _ID @1 _LPAREN parameter _RPAREN body

    _ID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: function_list .
    3 function_list: function_list . function

    _TYPE  shift, and go to state 1

    $default  reduce using rule 1 (program)

    function  go to state 7


state 4

    2 function_list: function .

    $default  reduce using rule 2 (function_list)


state 5

    5 function: _TYPE _ID . @1 _LPAREN parameter _RPAREN body

    $default  reduce using rule 4 (@1)

    @1  go to state 8


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 function_list: function_list function .

    $default  reduce using rule 3 (function_list)


state 8

    5 function: _TYPE _ID @1 . _LPAREN parameter _RPAREN body

    _LPAREN  shift, and go to state 9


state 9

    5 function: _TYPE _ID @1 _LPAREN . parameter _RPAREN body

    _TYPE  shift, and go to state 10

    $default  reduce using rule 6 (parameter)

    parameter  go to state 11


state 10

    7 parameter: _TYPE . _ID

    _ID  shift, and go to state 12


state 11

    5 function: _TYPE _ID @1 _LPAREN parameter . _RPAREN body

    _RPAREN  shift, and go to state 13


state 12

    7 parameter: _TYPE _ID .

    $default  reduce using rule 7 (parameter)


state 13

    5 function: _TYPE _ID @1 _LPAREN parameter _RPAREN . body

    _LBRACKET  shift, and go to state 14

    body  go to state 15


state 14

    8 body: _LBRACKET . constant_list variable_list statement_list _RBRACKET

    $default  reduce using rule 9 (constant_list)

    constant_list  go to state 16


state 15

    5 function: _TYPE _ID @1 _LPAREN parameter _RPAREN body .

    $default  reduce using rule 5 (function)


state 16

    8 body: _LBRACKET constant_list . variable_list statement_list _RBRACKET
   10 constant_list: constant_list . constant

    _CONST  shift, and go to state 17

    $default  reduce using rule 12 (variable_list)

    constant       go to state 18
    variable_list  go to state 19


state 17

   11 constant: _CONST . _TYPE _ID _ASSIGN literal _SEMICOLON

    _TYPE  shift, and go to state 20


state 18

   10 constant_list: constant_list constant .

    $default  reduce using rule 10 (constant_list)


state 19

    8 body: _LBRACKET constant_list variable_list . statement_list _RBRACKET
   13 variable_list: variable_list . variable

    _TYPE  shift, and go to state 21

    $default  reduce using rule 15 (statement_list)

    variable        go to state 22
    statement_list  go to state 23


state 20

   11 constant: _CONST _TYPE . _ID _ASSIGN literal _SEMICOLON

    _ID  shift, and go to state 24


state 21

   14 variable: _TYPE . _ID _SEMICOLON

    _ID  shift, and go to state 25


state 22

   13 variable_list: variable_list variable .

    $default  reduce using rule 13 (variable_list)


state 23

    8 body: _LBRACKET constant_list variable_list statement_list . _RBRACKET
   16 statement_list: statement_list . statement

    _IF        shift, and go to state 26
    _RETURN    shift, and go to state 27
    _ID        shift, and go to state 28
    _LBRACKET  shift, and go to state 29
    _RBRACKET  shift, and go to state 30

    statement             go to state 31
    compound_statement    go to state 32
    assignment_statement  go to state 33
    if_statement          go to state 34
    if_part               go to state 35
    return_statement      go to state 36


state 24

   11 constant: _CONST _TYPE _ID . _ASSIGN literal _SEMICOLON

    _ASSIGN  shift, and go to state 37


state 25

   14 variable: _TYPE _ID . _SEMICOLON

    _SEMICOLON  shift, and go to state 38


state 26

   37 if_part: _IF . _LPAREN rel_exp _RPAREN statement

    _LPAREN  shift, and go to state 39


state 27

   39 return_statement: _RETURN . num_exp _SEMICOLON

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    num_exp        go to state 44
    exp            go to state 45
    literal        go to state 46
    function_call  go to state 47


state 28

   22 assignment_statement: _ID . _ASSIGN num_exp _SEMICOLON

    _ASSIGN  shift, and go to state 48


state 29

   21 compound_statement: _LBRACKET . statement_list _RBRACKET

    $default  reduce using rule 15 (statement_list)

    statement_list  go to state 49


state 30

    8 body: _LBRACKET constant_list variable_list statement_list _RBRACKET .

    $default  reduce using rule 8 (body)


state 31

   16 statement_list: statement_list statement .

    $default  reduce using rule 16 (statement_list)


state 32

   17 statement: compound_statement .

    $default  reduce using rule 17 (statement)


state 33

   18 statement: assignment_statement .

    $default  reduce using rule 18 (statement)


state 34

   19 statement: if_statement .

    $default  reduce using rule 19 (statement)


state 35

   35 if_statement: if_part .
   36             | if_part . _ELSE statement

    _ELSE  shift, and go to state 50

    $default  reduce using rule 35 (if_statement)


state 36

   20 statement: return_statement .

    $default  reduce using rule 20 (statement)


state 37

   11 constant: _CONST _TYPE _ID _ASSIGN . literal _SEMICOLON

    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42

    literal  go to state 51


state 38

   14 variable: _TYPE _ID _SEMICOLON .

    $default  reduce using rule 14 (variable)


state 39

   37 if_part: _IF _LPAREN . rel_exp _RPAREN statement

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    num_exp        go to state 52
    exp            go to state 45
    literal        go to state 46
    function_call  go to state 47
    rel_exp        go to state 53


state 40

   26 exp: _ID .
   32 function_call: _ID . @2 _LPAREN argument _RPAREN

    _LPAREN   reduce using rule 31 (@2)
    $default  reduce using rule 26 (exp)

    @2  go to state 54


state 41

   29 literal: _INT_NUMBER .

    $default  reduce using rule 29 (literal)


state 42

   30 literal: _UINT_NUMBER .

    $default  reduce using rule 30 (literal)


state 43

   28 exp: _LPAREN . num_exp _RPAREN

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    num_exp        go to state 55
    exp            go to state 45
    literal        go to state 46
    function_call  go to state 47


state 44

   24 num_exp: num_exp . _AROP exp
   39 return_statement: _RETURN num_exp . _SEMICOLON

    _SEMICOLON  shift, and go to state 56
    _AROP       shift, and go to state 57


state 45

   23 num_exp: exp .

    $default  reduce using rule 23 (num_exp)


state 46

   25 exp: literal .

    $default  reduce using rule 25 (exp)


state 47

   27 exp: function_call .

    $default  reduce using rule 27 (exp)


state 48

   22 assignment_statement: _ID _ASSIGN . num_exp _SEMICOLON

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    num_exp        go to state 58
    exp            go to state 45
    literal        go to state 46
    function_call  go to state 47


state 49

   16 statement_list: statement_list . statement
   21 compound_statement: _LBRACKET statement_list . _RBRACKET

    _IF        shift, and go to state 26
    _RETURN    shift, and go to state 27
    _ID        shift, and go to state 28
    _LBRACKET  shift, and go to state 29
    _RBRACKET  shift, and go to state 59

    statement             go to state 31
    compound_statement    go to state 32
    assignment_statement  go to state 33
    if_statement          go to state 34
    if_part               go to state 35
    return_statement      go to state 36


state 50

   36 if_statement: if_part _ELSE . statement

    _IF        shift, and go to state 26
    _RETURN    shift, and go to state 27
    _ID        shift, and go to state 28
    _LBRACKET  shift, and go to state 29

    statement             go to state 60
    compound_statement    go to state 32
    assignment_statement  go to state 33
    if_statement          go to state 34
    if_part               go to state 35
    return_statement      go to state 36


state 51

   11 constant: _CONST _TYPE _ID _ASSIGN literal . _SEMICOLON

    _SEMICOLON  shift, and go to state 61


state 52

   24 num_exp: num_exp . _AROP exp
   38 rel_exp: num_exp . _RELOP num_exp

    _AROP   shift, and go to state 57
    _RELOP  shift, and go to state 62


state 53

   37 if_part: _IF _LPAREN rel_exp . _RPAREN statement

    _RPAREN  shift, and go to state 63


state 54

   32 function_call: _ID @2 . _LPAREN argument _RPAREN

    _LPAREN  shift, and go to state 64


state 55

   24 num_exp: num_exp . _AROP exp
   28 exp: _LPAREN num_exp . _RPAREN

    _RPAREN  shift, and go to state 65
    _AROP    shift, and go to state 57


state 56

   39 return_statement: _RETURN num_exp _SEMICOLON .

    $default  reduce using rule 39 (return_statement)


state 57

   24 num_exp: num_exp _AROP . exp

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    exp            go to state 66
    literal        go to state 46
    function_call  go to state 47


state 58

   22 assignment_statement: _ID _ASSIGN num_exp . _SEMICOLON
   24 num_exp: num_exp . _AROP exp

    _SEMICOLON  shift, and go to state 67
    _AROP       shift, and go to state 57


state 59

   21 compound_statement: _LBRACKET statement_list _RBRACKET .

    $default  reduce using rule 21 (compound_statement)


state 60

   36 if_statement: if_part _ELSE statement .

    $default  reduce using rule 36 (if_statement)


state 61

   11 constant: _CONST _TYPE _ID _ASSIGN literal _SEMICOLON .

    $default  reduce using rule 11 (constant)


state 62

   38 rel_exp: num_exp _RELOP . num_exp

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    num_exp        go to state 68
    exp            go to state 45
    literal        go to state 46
    function_call  go to state 47


state 63

   37 if_part: _IF _LPAREN rel_exp _RPAREN . statement

    _IF        shift, and go to state 26
    _RETURN    shift, and go to state 27
    _ID        shift, and go to state 28
    _LBRACKET  shift, and go to state 29

    statement             go to state 69
    compound_statement    go to state 32
    assignment_statement  go to state 33
    if_statement          go to state 34
    if_part               go to state 35
    return_statement      go to state 36


state 64

   32 function_call: _ID @2 _LPAREN . argument _RPAREN

    _ID           shift, and go to state 40
    _INT_NUMBER   shift, and go to state 41
    _UINT_NUMBER  shift, and go to state 42
    _LPAREN       shift, and go to state 43

    $default  reduce using rule 33 (argument)

    num_exp        go to state 70
    exp            go to state 45
    literal        go to state 46
    function_call  go to state 47
    argument       go to state 71


state 65

   28 exp: _LPAREN num_exp _RPAREN .

    $default  reduce using rule 28 (exp)


state 66

   24 num_exp: num_exp _AROP exp .

    $default  reduce using rule 24 (num_exp)


state 67

   22 assignment_statement: _ID _ASSIGN num_exp _SEMICOLON .

    $default  reduce using rule 22 (assignment_statement)


state 68

   24 num_exp: num_exp . _AROP exp
   38 rel_exp: num_exp _RELOP num_exp .

    _AROP  shift, and go to state 57

    $default  reduce using rule 38 (rel_exp)


state 69

   37 if_part: _IF _LPAREN rel_exp _RPAREN statement .

    $default  reduce using rule 37 (if_part)


state 70

   24 num_exp: num_exp . _AROP exp
   34 argument: num_exp .

    _AROP  shift, and go to state 57

    $default  reduce using rule 34 (argument)


state 71

   32 function_call: _ID @2 _LPAREN argument . _RPAREN

    _RPAREN  shift, and go to state 72


state 72

   32 function_call: _ID @2 _LPAREN argument _RPAREN .

    $default  reduce using rule 32 (function_call)
